--- a/content/profile.html
+++ b/content/profile.html
@@ -43,5 +43,6 @@
       <p>Reelix 2025 ©</p>
     </div>
     <script src="../js/content.js"></script>
+    <script src="../js/profile.js"></script>
   </body>
 </html>
